# dotfiles

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  symlonk-config.toml  symlonk-lock.toml  symlonk-schema.json  test.http
aws/: completion.zsh  install.sh  install_macos.sh
bun/: completion.zsh  path.zsh
docker/: install.sh  install_macos.sh
engine/: __init__.py  __main__.py  cli.py  console.py  executor.py  graph.py  health.py  module.py  requirements.py  state.py  symlinks.py
ensimag/: alias.zsh  completion.zsh  path.zsh  vpn.zsh
functions/: _c  _mann  _mvdownload  c  extract
gcp/: completion.zsh  install.sh
git/: aliases.zsh  gitconfig  gitconfig.local.template  symlinks.conf  symlonk.toml
go/: path.zsh
i3/: config  i3blocks.conf  install.sh  symlinks.conf  symlonk.toml
jetbrains/: symlonk.toml
kanata/: .editorconfig  OLDkanata.kbd  install.sh  kanata.kbd  minimal.kbd  symlonk.toml
llamacpp/: .gitignore  README.md  env.zsh  install.sh  install_apt.sh  install_macos.sh  path.zsh
llamacpp/completion_server/: README.md  pyproject.toml
llamacpp/completion_server/completion_server/: __main__.py  completion_service.py  entities.py  log.py  model.py  runner.py  server.py
llamacpp/completion_server/tests/: test_completion_service.py
llm-tools/: install.sh
macos/: README.md  github_dark_dimmed_iterm_preset.itermcolors  install_macos.sh
mistral/: .gitignore  api_key.zsh.example
mysql/: install_macos.sh
neoxia/: completion.zsh  install.sh
node/: install.sh  install_macos.sh
nvim/: functions.zsh  install.sh  install_macos.sh  symlinks.conf  symlonk.toml
ocaml/: init_env.zsh  install.sh
ollama/: .gitignore  README.md  docker-compose.yaml  env.zsh  install_macos.sh  searxng.env.example  webui.compose.yaml  webui.docker-compose.yaml
opencode/: .opencode.json.OLDFORMAT  install.sh  path.zsh  symlonk.toml  uninstall.sh
python/: aliases.zsh  install.sh  install_macos.sh  path.zsh  symlonk.toml
qmk/: README.md  install.sh  symlonk.toml
rust/: install.sh  install_macos.sh
scripts/: bootstrap  bootstrap.py  bootstrap.sh  cleanup_test.sh  colored_logger.py  dotfiles  install  install_apt  install_macos  migrate.py  test.sh
(+383 files in other folders)
