[project]
name = "dotfiles-engine"
version = "0.1.0"
description = "Dotfiles management engine with dependency resolution"
authors = [{name = "Louis Brunet", email = "louis@brunet.email"}]
requires-python = ">=3.13"
dependencies = [
    "pyyaml >=6.0",
    "tomli >=2.0",
    "tomli-w >=1.0",
]

[dependency-groups]
dev = [
    "pytest >=7.0",
    "ruff >=0.8",
]

[project.scripts]
dotfiles = "engine.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["engine"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function call in argument defaults
    "N806",  # variable in function should be lowercase
    "B007",  # loop control variable not used
    "SIM103",  # return the negated condition directly
    "SIM108",  # use ternary operator
    "B905",  # zip without strict parameter
    "UP015",  # unnecessary mode argument
    "F821",  # undefined name (handled by type stubs)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
